--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "lit-review",
   "version": "1.0.0",
-  "description": "",
+  "description": "Command line tool for scientists doing lit reviews.",
   "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Christopher Okhravi",
+  "license": "GNU GPLv3",
   "dependencies": {
     "chalk": "^2.4.2",
     "selenium-webdriver": "^4.0.0-alpha.1"
+  },
+  "bin": {
+    "lit": "./cli.js"
   }
 }
