--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lit-review",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Command line tool for scientists doing lit reviews.",
   "main": "cli.js",
   "scripts": {
@@ -11,6 +11,10 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "selenium-webdriver": "^4.0.0-alpha.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chrokh/lit.git"
   },
   "bin": {
     "lit": "./cli.js"
